# cpvc

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
examples/: set_volume.rs
ext_tests/: pulseaudio_tester.sh  wasapi_tester.ps1
src/: error.rs  lib.rs  safe.rs
src/api/: mod.rs
src/command/: README.md  mod.rs
src/coreaudio/: device.rs  mod.rs
src/cpal/: mod.rs
src/device/: mod.rs
src/legacy/: mod.rs
src/legacy/command/: README.md
src/pulseaudio/: device.rs  mod.rs
src/scan/: mod.rs
src/wasapi/: device.rs  mod.rs
