[package]
name = "cpvc"
version = "0.2.1"
description = "A simple to use library + wrapper for controlling system audio cross platform (WIP)"
readme = "README.md"
keywords = ["audio"]
repository = "https://github.com/xephyris/cpvc"
license-file = "LICENSE"
authors = ["xephyris"]
edition = "2024"

[dependencies]

[target.'cfg( target_os = "linux")'.dependencies]
alsa = "0.9.1"
