[package]
name = "cpvc"
version = "0.2.1"
description = "A simple to use library + wrapper for controlling system audio cross platform (WIP)"
readme = "README.md"
keywords = ["audio"]
repository = "https://github.com/xephyris/cpvc"
license-file = "LICENSE"
authors = ["xephyris"]
edition = "2024"

[dependencies]
windows = { version = "0.61.3", features = ["Win32", "Win32_Media", "Win32_Media_Audio", "Win32_System", "Win32_System_Com", 
                                            "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_UI_Shell_PropertiesSystem", 
                                            "Win32_Devices", "Win32_Devices_FunctionDiscovery", ] }

[target.'cfg( target_os = "linux")'.dependencies]
alsa = "0.9.1"
