[package]
name = "cpvc"
version = "0.3.1"
description = "A simple crate + wrapper for controlling system audio cross platform"
readme = "README.md"
keywords = ["audio", "cross-platform"]
repository = "https://github.com/xephyris/cpvc"
license = "GPL-3.0"
license-file = "LICENSE"
authors = ["xephyris"]
edition = "2024"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = ["Win32", "Win32_Media", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System", 
                                            "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", 
                                            "Win32_UI_Shell_PropertiesSystem", "Win32_Devices", 
                                            "Win32_Devices_FunctionDiscovery",] }


[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
objc2-core-audio = "0.3.1"
objc2-core-audio-types = "0.3.1"

[features]
debug = []
